calculate sigma points

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,9 +43,13 @@ IF (GTEST_FOUND)
    add_executable(testmath math.cpp logging.cpp math_test.cpp)
    target_link_libraries(testmath ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${M_LIBRARY})
 
+   add_executable(testgaussian gaussian.cpp gaussian_test.cpp)
+   target_link_libraries(testgaussian ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${M_LIBRARY})
+
    add_test(NAME parser COMMAND testparser)
    add_test(NAME matrices COMMAND testmatrices)
    add_test(NAME math COMMAND testmath)
+   add_test(NAME gaussian COMMAND testgaussian)
 ENDIF(GTEST_FOUND)
 
 add_executable(testfile parser.cpp testfile.cpp)
