add CTRV Measurement Model and Measurement Noise calculation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ IF (GTEST_FOUND)
    add_executable(testgaussian gaussian.cpp math.cpp logging.cpp gaussian_test.cpp)
    target_link_libraries(testgaussian ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${M_LIBRARY})
 
-   add_executable(testctrv ctrv.cpp math.cpp logging.cpp ctrv_test.cpp)
+   add_executable(testctrv ctrv.cpp math.cpp logging.cpp gaussian.cpp ctrv_test.cpp)
    target_link_libraries(testctrv ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${M_LIBRARY})
 
    add_test(NAME parser COMMAND testparser)
